# kubio

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  install.sh
.design/v0.1.0/: PRD.md  README.md  observability-dashboard.md  policy-and-safety.md  request-lifecycle.md  system-architecture.md  tasks.md  testing-release.md
.design/v0.2.0/: PRD.md  README.md  architecture-delta.md  disk-store.md  observability-dashboard.md  revalidation-and-staleness.md  route-hints-and-query.md  tasks.md  testing-release.md
.design/v0.3.0/: PRD.md  README.md  architecture-delta.md  http2-support.md  http3-support.md  observability-dashboard.md  performance-plan.md  tasks.md  testing-release.md
.design/v0.3.1/: PRD.md  README.md  architecture-delta.md  dependency-review.md  http3-runtime.md  observability.md  performance-and-benchmarks.md  tasks.md  testing-release.md
.design/v0.3.2/: PRD.md  README.md  architecture-refactor.md  tasks.md  testing-release.md
.design/v0.4.0/: PRD.md  README.md  installer-and-artifacts.md  tasks.md  testing-release.md  update-check-and-self-update.md
.design/v0.4.1/: PRD.md  README.md  installer-and-updater-platforms.md  platform-and-artifact-contract.md  release-workflow.md  tasks.md  testing-release.md
.design/v0.5.0/: PRD.md  README.md  adaptive-reuse-policy.md  observability-dashboard.md  path-intelligence.md  tasks.md  testing-release.md
.design/v0.5.1/: PRD.md  README.md  evidence-ledger-and-decay.md  key-shaping-and-variants.md  observability-dashboard.md  precision-reuse-policy.md  tasks.md  testing-release.md
.design/v0.5.2/: PRD.md  README.md  header-sanitization-and-store.md  observability-dashboard.md  response-header-equivalence.md  tasks.md  testing-release.md
.design/v0.5.3/: PRD.md  README.md  observability-dashboard.md  reload-safety-and-state.md  runtime-config-reload.md  tasks.md  testing-release.md
.github/workflows/: ci.yml  release.yml
crates/kubio-bench/: Cargo.toml
crates/kubio-bench/fixtures/: localhost-cert.pem
crates/kubio-bench/src/: args.rs  client.rs  h3.rs  main.rs  origin.rs  proxy.rs  report.rs  runner.rs
crates/kubio-cli/: Cargo.toml
crates/kubio-cli/src/: args.rs  main.rs
crates/kubio-cli/src/commands/: admin.rs  config_cmd.rs  mod.rs  reload.rs  serve.rs  update.rs
crates/kubio-cli/src/config/: apply.rs  file.rs  mod.rs  validate.rs
crates/kubio-core/: Cargo.toml
crates/kubio-core/src/: cache_key.rs  decision.rs  hash.rs  headers.rs  lib.rs  metrics.rs  mode.rs  normalization.rs  parsing.rs  protocol.rs  route.rs
crates/kubio-core/src/config/: mod.rs  reload.rs
crates/kubio-dashboard/: Cargo.toml
crates/kubio-dashboard/src/: api.rs  auth.rs  html.rs  lib.rs  models.rs  pages.rs  router.rs  state.rs
crates/kubio-observe/: Cargo.toml
crates/kubio-observe/src/: events.rs  latency.rs  lib.rs  observer.rs  protocol.rs  query.rs  records.rs  response_headers.rs  snapshot.rs  state.rs
crates/kubio-policy/: Cargo.toml
crates/kubio-policy/src/: classes.rs  decision.rs  engine.rs  headers.rs  lib.rs  signals.rs
crates/kubio-proxy/: Cargo.toml
crates/kubio-proxy/src/: alt_svc.rs  cache.rs  handler.rs  headers.rs  in_flight.rs  lib.rs  origin.rs  query.rs  response.rs  revalidation.rs  route_hints.rs  router.rs  runtime.rs  state.rs
crates/kubio-proxy/tests/: proxy_integration.rs
crates/kubio-proxy/tests/fixtures/: localhost-key.pem
crates/kubio-store/: Cargo.toml
crates/kubio-store/src/: disk.rs  entry.rs  error.rs  lib.rs  memory.rs  metadata.rs  metrics.rs  purge.rs  store.rs
crates/kubio-telemetry/: Cargo.toml
crates/kubio-telemetry/src/: histogram.rs  labels.rs  lib.rs  render.rs  store.rs  text.rs  tracing.rs
crates/kubio-transport/: Cargo.toml
crates/kubio-transport/src/: http12.rs  lib.rs  origin.rs  tls.rs
crates/kubio-transport/src/http3/: mod.rs
docs/: benchmarks-v0.3.1.md  configuration.md  deployment.md  development.md  getting-started.md  how-kubio-decides.md  install-update.md  metrics.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md  release-notes-v0.3.0.md  release-notes-v0.3.1.md  release-notes-v0.3.2.md  release-notes-v0.4.0.md  release-notes-v0.4.1.md  release-notes-v0.5.0.md  release-notes-v0.5.1.md  release-notes-v0.5.2.md  release-notes-v0.5.3.md  roadmap.md  safety-model.md
examples/: kubio-v0.2.yml  kubio-v0.3-http2.yml  kubio-v0.3-http3-guarded.yml  kubio-v0.3.1-http3-runtime.yml  kubio-v0.5.3-reload.yml  kubio.yml
examples/bench/: baseline_scenarios.sh  docker_smoke.sh  local_smoke.sh  release_smoke.sh
