[package]
name = "kubio-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
experimental-http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn", "kubio-proxy/experimental-http3"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
http.workspace = true
kubio-core.workspace = true
kubio-observe.workspace = true
kubio-policy.workspace = true
kubio-proxy.workspace = true
kubio-store.workspace = true
quinn = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
