[package]
name = "kubio-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
experimental-http3 = ["kubio-proxy/experimental-http3"]

[[bin]]
name = "kubio"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
http.workspace = true
kubio-core.workspace = true
kubio-dashboard.workspace = true
kubio-observe.workspace = true
kubio-policy.workspace = true
kubio-proxy.workspace = true
kubio-store.workspace = true
kubio-telemetry.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
