[package]
name = "kubio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
http.workspace = true
percent-encoding.workspace = true
serde.workspace = true
url.workspace = true

[dev-dependencies]
proptest.workspace = true
