[package]
name = "kubio-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
kubio-core.workspace = true
kubio-observe.workspace = true
kubio-store.workspace = true
kubio-telemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
