[package]
name = "kubio-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
kubio-core.workspace = true
kubio-observe.workspace = true
kubio-policy.workspace = true
kubio-store.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
kubio-telemetry.workspace = true
serde_json.workspace = true
tokio.workspace = true
