[package]
name = "kubio-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
experimental-http3 = ["kubio-transport/experimental-http3"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
kubio-core.workspace = true
kubio-observe.workspace = true
kubio-policy.workspace = true
kubio-store.workspace = true
kubio-transport.workspace = true
reqwest.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
h3.workspace = true
h3-quinn.workspace = true
kubio-telemetry.workspace = true
quinn.workspace = true
serde_json.workspace = true
tokio.workspace = true
