[package]
name = "kubio-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
http.workspace = true
kubio-core.workspace = true
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
