[package]
name = "kubio-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
experimental-http3 = ["dep:h3", "dep:h3-quinn", "dep:quinn", "dep:rustls-pemfile", "dep:webpki-roots"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
futures-core.workspace = true
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
kubio-core.workspace = true
quinn = { workspace = true, optional = true }
reqwest.workspace = true
rustls-pemfile = { workspace = true, optional = true }
tokio.workspace = true
tokio-rustls.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true
webpki-roots = { workspace = true, optional = true }
